# HTTP-Server-Client

./: CMakeLists.txt  debugger.h  http.cpp  http.h  main.cpp  networking.cpp  networking.h
Client/: client.cpp
Evaluator/: evaluator.cpp
